// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates 5nodes raft kubernetes tessera 1`] = `
"sep_deployment_files: true
nodes:
  number: 5
quorum:
  Node_DataDir: /etc/quorum/qdata
  Key_Dir_Base: 7nodes
  Permissioned_Nodes_File: out/config/permissioned-nodes.json
  Genesis_File: out/config/genesis.json
  quorum:
    consensus: raft
    Raft_Port: 50400
    Quorum_Version: 2.7.0
    Docker_Repo: quorumengineering
  tm:
    Name: tessera
    Tm_Version: 0.10.5
    Docker_Repo: quorumengineering
    Port: 9000
    3Party_Port: 9080
    Tessera_Config_Dir: out/config
geth:
  Node_RPCPort: 8545
  NodeP2P_ListenAddr: 21000
  network:
    id: 10
    public: false
  verbosity: 9
  Geth_Startup_Params: --rpccorsdomain=\\\\\\"*\\\\\\"
k8s:
  service:
    type: NodePort
  storage:
    Type: PVC
    Capacity: 200Mi"
`;

exports[`creates 7nodes istanbul docker generate keys 1`] = `
"sep_deployment_files: true
nodes:
  number: 7
quorum:
  Node_DataDir: /etc/quorum/qdata
  Key_Dir_Base: out/config
  Permissioned_Nodes_File: out/config/permissioned-nodes.json
  Genesis_File: out/config/genesis.json
  quorum:
    consensus: istanbul
    Raft_Port: 50400
    Quorum_Version: 2.7.0
    Docker_Repo: quorumengineering
  tm:
    Name: tessera
    Tm_Version: 0.10.5
    Docker_Repo: quorumengineering
    Port: 9000
    3Party_Port: 9080
    Tessera_Config_Dir: out/config
geth:
  Node_RPCPort: 8545
  NodeP2P_ListenAddr: 21000
  network:
    id: 10
    public: false
  verbosity: 9
  Geth_Startup_Params: --rpccorsdomain=\\\\\\"*\\\\\\"
k8s:
  service:
    type: NodePort
  storage:
    Type: PVC
    Capacity: 200Mi"
`;

exports[`creates 7nodes istanbul docker generate keys no tessera 1`] = `
"sep_deployment_files: true
nodes:
  number: 7
quorum:
  Node_DataDir: /etc/quorum/qdata
  Key_Dir_Base: out/config
  Permissioned_Nodes_File: out/config/permissioned-nodes.json
  Genesis_File: out/config/genesis.json
  quorum:
    consensus: istanbul
    Raft_Port: 50400
    Quorum_Version: 2.7.0
    Docker_Repo: quorumengineering
  tm:
    Name: tessera
    Tm_Version: 0.10.5
    Docker_Repo: quorumengineering
    Port: 9000
    3Party_Port: 9080
    Tessera_Config_Dir: out/config
geth:
  Node_RPCPort: 8545
  NodeP2P_ListenAddr: 21000
  network:
    id: 10
    public: false
  verbosity: 9
  Geth_Startup_Params: --rpccorsdomain=\\\\\\"*\\\\\\"
k8s:
  service:
    type: NodePort
  storage:
    Type: PVC
    Capacity: 200Mi"
`;

exports[`creates 7nodes istanbul docker generate keys with cakeshop 1`] = `
"sep_deployment_files: true
nodes:
  number: 7
quorum:
  Node_DataDir: /etc/quorum/qdata
  Key_Dir_Base: out/config
  Permissioned_Nodes_File: out/config/permissioned-nodes.json
  Genesis_File: out/config/genesis.json
  quorum:
    consensus: istanbul
    Raft_Port: 50400
    Quorum_Version: 2.7.0
    Docker_Repo: quorumengineering
  tm:
    Name: tessera
    Tm_Version: 0.10.5
    Docker_Repo: quorumengineering
    Port: 9000
    3Party_Port: 9080
    Tessera_Config_Dir: out/config
cakeshop:
  version: latest
  Docker_Repo: quorumengineering
  service:
    type: NodePort
    nodePort: 8999
geth:
  Node_RPCPort: 8545
  NodeP2P_ListenAddr: 21000
  network:
    id: 10
    public: false
  verbosity: 9
  Geth_Startup_Params: --rpccorsdomain=\\\\\\"*\\\\\\"
k8s:
  service:
    type: NodePort
  storage:
    Type: PVC
    Capacity: 200Mi"
`;

exports[`creates 7nodes istanbul kubernetes generate keys 1`] = `
"sep_deployment_files: true
nodes:
  number: 7
quorum:
  Node_DataDir: /etc/quorum/qdata
  Key_Dir_Base: out/config
  Permissioned_Nodes_File: out/config/permissioned-nodes.json
  Genesis_File: out/config/genesis.json
  quorum:
    consensus: istanbul
    Raft_Port: 50400
    Quorum_Version: 2.7.0
    Docker_Repo: quorumengineering
  tm:
    Name: tessera
    Tm_Version: 0.10.5
    Docker_Repo: quorumengineering
    Port: 9000
    3Party_Port: 9080
    Tessera_Config_Dir: out/config
geth:
  Node_RPCPort: 8545
  NodeP2P_ListenAddr: 21000
  network:
    id: 10
    public: false
  verbosity: 9
  Geth_Startup_Params: --rpccorsdomain=\\\\\\"*\\\\\\"
k8s:
  service:
    type: NodePort
  storage:
    Type: PVC
    Capacity: 200Mi"
`;
